--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -59,7 +59,7 @@ jobs:
         if: failure() && github.event_name == 'pull_request'
         run: |
           curl --request POST \
-            --url https://api.github.com/repos/{{github.repository}}/issues \
+            --url https://api.github.com/repos/${{github.repository}}/issues \
             --header 'authorization: Bearer ${{secrets.GITHUB_TOKEN}}'
             --header 'content-type: application/json' \
             -- data '{
