--- a/.github/workflows/issue.yml
+++ b/.github/workflows/issue.yml
@@ -1,11 +1,11 @@
 name: Notify on Issue
 on:
-  issue:
+  issues:
     types: [opened]
 
 jobs:
   print-message:
     runs-on: ubuntu-latest
-      steps:
-        - name: echo a string 
-          run: echo "An issue has been created"
+    steps:
+      - name: echo a string
+        run: echo "An issue has been created"
