--- a/.github/workflows/actions.yml
+++ b/.github/workflows/actions.yml
@@ -4,7 +4,16 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
-      - uses: ./.github/workflows/actions/hello
+      - uses: './.github/actions/issue'
+        id: issue
+        with:
+          token: ${{secrets.GITHUB_TOKEN}}
+          title: title
+          body: body
+          assignees: |
+            tichon29
+      - run: echo ${{steps.issue.outputs.issue}}
+      - uses: ./.github/actions/hello
         id: hello
         with:
           who-to-greet: "Jean-Pierre"
